exports[`Rich Text Lists > Unordered List (UL) > should preserve current marks when inserting a new li #0`] =
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "content": [
                {
                  "data": {},
                  "marks": [
                    {
                      "type": "bold"
                    }
                  ],
                  "nodeType": "text",
                  "value": "bold "
                },
                {
                  "data": {},
                  "marks": [
                    {
                      "type": "italic"
                    }
                  ],
                  "nodeType": "text",
                  "value": "italic"
                }
              ],
              "data": {},
              "nodeType": "paragraph"
            }
          ],
          "data": {},
          "nodeType": "list-item"
        },
        {
          "content": [
            {
              "content": [
                {
                  "data": {},
                  "marks": [
                    {
                      "type": "italic"
                    }
                  ],
                  "nodeType": "text",
                  "value": "more italic text"
                }
              ],
              "data": {},
              "nodeType": "paragraph"
            }
          ],
          "data": {},
          "nodeType": "list-item"
        }
      ],
      "data": {},
      "nodeType": "unordered-list"
    },
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    }
  ],
  "data": {},
  "nodeType": "document"
};

exports[`Rich Text Lists > Ordered List (OL) > should preserve current marks when inserting a new li #0`] =
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "content": [
                {
                  "data": {},
                  "marks": [
                    {
                      "type": "bold"
                    }
                  ],
                  "nodeType": "text",
                  "value": "bold "
                },
                {
                  "data": {},
                  "marks": [
                    {
                      "type": "italic"
                    }
                  ],
                  "nodeType": "text",
                  "value": "italic"
                }
              ],
              "data": {},
              "nodeType": "paragraph"
            }
          ],
          "data": {},
          "nodeType": "list-item"
        },
        {
          "content": [
            {
              "content": [
                {
                  "data": {},
                  "marks": [
                    {
                      "type": "italic"
                    }
                  ],
                  "nodeType": "text",
                  "value": "more italic text"
                }
              ],
              "data": {},
              "nodeType": "paragraph"
            }
          ],
          "data": {},
          "nodeType": "list-item"
        }
      ],
      "data": {},
      "nodeType": "ordered-list"
    },
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    }
  ],
  "data": {},
  "nodeType": "document"
};

exports[`Rich Text Lists > Unordered List (UL) > should move nested list items when parent is invalid #0`] =
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "content": [
                {
                  "data": {},
                  "marks": [],
                  "nodeType": "text",
                  "value": "1"
                }
              ],
              "data": {},
              "nodeType": "paragraph"
            },
            {
              "content": [
                {
                  "content": [
                    {
                      "content": [
                        {
                          "data": {},
                          "marks": [],
                          "nodeType": "text",
                          "value": "2"
                        }
                      ],
                      "data": {},
                      "nodeType": "paragraph"
                    }
                  ],
                  "data": {},
                  "nodeType": "list-item"
                }
              ],
              "data": {},
              "nodeType": "unordered-list"
            }
          ],
          "data": {},
          "nodeType": "list-item"
        },
        {
          "content": [
            {
              "content": [
                {
                  "data": {},
                  "marks": [],
                  "nodeType": "text",
                  "value": "4"
                }
              ],
              "data": {},
              "nodeType": "paragraph"
            }
          ],
          "data": {},
          "nodeType": "list-item"
        }
      ],
      "data": {},
      "nodeType": "unordered-list"
    },
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    }
  ],
  "data": {},
  "nodeType": "document"
};

exports[`Rich Text Lists > Ordered List (OL) > should move nested list items when parent is invalid #0`] =
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "content": [
                {
                  "data": {},
                  "marks": [],
                  "nodeType": "text",
                  "value": "1"
                }
              ],
              "data": {},
              "nodeType": "paragraph"
            },
            {
              "content": [
                {
                  "content": [
                    {
                      "content": [
                        {
                          "data": {},
                          "marks": [],
                          "nodeType": "text",
                          "value": "2"
                        }
                      ],
                      "data": {},
                      "nodeType": "paragraph"
                    }
                  ],
                  "data": {},
                  "nodeType": "list-item"
                }
              ],
              "data": {},
              "nodeType": "ordered-list"
            }
          ],
          "data": {},
          "nodeType": "list-item"
        },
        {
          "content": [
            {
              "content": [
                {
                  "data": {},
                  "marks": [],
                  "nodeType": "text",
                  "value": "4"
                }
              ],
              "data": {},
              "nodeType": "paragraph"
            }
          ],
          "data": {},
          "nodeType": "list-item"
        }
      ],
      "data": {},
      "nodeType": "ordered-list"
    },
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    }
  ],
  "data": {},
  "nodeType": "document"
};
